--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.Nira"
         tools:targetApi="31">
         <activity
+            android:name=".views.SelectLendersActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.EMICalculateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
