--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:theme="@style/Theme.Nira"
         tools:targetApi="31">
         <activity
+            android:name=".views.AboutUsActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.SelectLendersActivity"
             android:exported="false" />
         <activity
             android:name=".views.EMICalculateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.EMIDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".views.LoginActivity"
